2003-10-27  Geert Stappers <stappers@stappers.nl>

	* ChangeLog:
	Created this file.