@@ -4,6 +4,8 @@ desktop_DATA 	 = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 
+## bugzilla 122011 for catalog.xml
+
 ## bugzilla 125579 for conglomerate.schemas
 
 
