@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<!DOCTYPE catalog
+   PUBLIC "-//OASIS/DTD Entity Resolution XML Catalog V1.0//EN"
+   "http://www.oasis-open.org/committees/entity/release/1.0/catalog.dtd">
+
+<catalog xmlns="urn:oasis:names:tc:entity:xmlns:xml:catalog">
+
+  <!-- Map dispspec canonical URL system id to local file name -->
+  <rewriteSystem
+    systemIdStartString="http://conglomerate.org/current/dtd/xds.dtd"
+    rewritePrefix="xds.dtd"/>
+
+  <!-- Dispspec PUBLIC ID to local file name mapping -->
+  <public publicId="-//Gnome//DTD Conglomerate display spec 1.0//EN"
+    uri="./xds.dtd"/>
+
+</catalog>
